сделал обработку ошибок для форм, реализовал редактирование профиля

--- a/src/components/Article/Article.module.sass
+++ b/src/components/Article/Article.module.sass
@@ -22,9 +22,10 @@
   color: rgba(0, 0, 0, 0.75)
 
 .tag
-  padding: 3px 6px
+  padding: 1px 6px
   border: 1px solid rgba(0, 0, 0, 0.5)
   border-radius: 2px
+  margin-right: 8px
 
 .description
   font-size: 12px
