--- a/src/components/Layout/Header/Header.module.sass
+++ b/src/components/Layout/Header/Header.module.sass
@@ -14,3 +14,33 @@
 
 .sign-in
   font-size: 18px
+
+.logout
+  font-size: 18px
+  color: rgba(0, 0, 0, 0.75)
+  padding: 10px 18px
+  border: 1px solid rgba(0, 0, 0, 0.75)
+  border-radius: 5px
+  margin-left: 27px
+
+.create
+  font-size: 14px
+  color: #52C41A
+  padding: 6px 10px
+  border: 1px solid #52C41A
+  border-radius: 5px  
+
+.islogin
+  display: flex
+  align-items: center
+
+.account
+  display: flex
+  align-items: center
+  margin-left: 27px
+
+.avatar
+  width: 46px
+  height: 46px
+  margin-left: 15px
+
