Сделал функционал редактирование\удаление статей, и лайки

--- a/src/components/Pages/Article/ArticlePage.module.sass
+++ b/src/components/Pages/Article/ArticlePage.module.sass
@@ -42,7 +42,8 @@
 .author
   flex-basis: 30%
   display: flex
-  justify-content: flex-end
+  flex-direction: column
+  align-items: flex-end
 
 .name
   display: block
@@ -61,3 +62,14 @@
   justify-content: center
   align-items: center
   height: calc(100vh - 80px)
+
+.edit
+  font-size: 14px
+  color: #52C41A
+  padding: 6px 20px
+  border: 1px solid #52C41A
+  border-radius: 5px  
+
+.like
+  border: none
+  background: none
