--- a/src/components/Article/Article.module.sass
+++ b/src/components/Article/Article.module.sass
@@ -16,7 +16,7 @@
   color: #1890FF
   font-size: 20px
   margin-right: 13px
-  overflow-wrap: anywhere / break-word
+  overflow-wrap: anywhere
 
 .count-like
   color: rgba(0, 0, 0, 0.75)
@@ -26,11 +26,13 @@
   border: 1px solid rgba(0, 0, 0, 0.5)
   border-radius: 2px
   margin-right: 8px
+  overflow-wrap: anywhere
 
 .description
   font-size: 12px
   line-height: 22px
   color: rgba(0, 0, 0, 0.75)
+  overflow-wrap: anywhere
 
 .author
   flex-basis: 30%
@@ -48,3 +50,7 @@
 
 .avatar
   margin-left: 12px
+
+.like
+  border: none
+  background: none
