--- a/src/index.sass
+++ b/src/index.sass
@@ -3,7 +3,7 @@
 
 body
   margin: 0
-  font-family: 'Inter UI', sans-serif
+  font-family: 'Roboto', sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
