--- a/src/components/Pages/Article/ArticlePage.module.sass
+++ b/src/components/Pages/Article/ArticlePage.module.sass
@@ -73,3 +73,10 @@
 .like
   border: none
   background: none
+
+.noarticle
+  color: #1677ff
+  display: flex
+  justify-content: center
+  align-items: center
+  height: calc(100vh - 80px)
